--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,6 @@
             ],
             "styles": [
               "src/styles.css"
-
             ],
             "scripts": []
           },
@@ -52,7 +51,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -91,6 +96,16 @@
               "src/styles.css"
             ],
             "scripts": []
+          }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "jt-blog-app:build:production",
+            "firebaseProject": "erps-jovethtecnologia",
+            "firebaseHostingSite": "eusebiojoveth"
           }
         }
       }
